--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <style>
     .new {background-image: url('https://i.imgur.com/9hVIbXq.jpg'); background-size: contain;}
     .attack {background-image: url('https://i.imgur.com/VmEgv43.jpg'); background-size: contain;}
@@ -42,7 +43,7 @@
     </div>
   </div>
 
-  <script language="Javascript" src="func-index.js"></script>
-  <!-- <script src="oo-index.js"></script> -->
+  <!-- <script language="Javascript" src="func-index.js"></script> -->
+  <script src="oo-index.js"></script>
 </body>
 </html>
